--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
 {% endblock pubdate %}
 
 {% block content %}
+{% for obj in harvard_park_homicides %}
+{{ obj.first_name }} {{ obj.last_name }}<br>
+{% endfor %}
 {% endblock content %}
+
